# kurokami

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PRODUCTION_READINESS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  install.sh  kurokami.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
core/: agentic_loop.py  checkpoints.py  cli.py  config.py  database.py  db.py  discovery.py  exploitation.py  health.py  logging_config.py  module_base.py  ollama.py  planner.py  rag.py  rate_limiter.py  reporting.py  validators.py
modules/: k_curl.py  k_dnsenum.py  k_gobuster.py  k_http_trace_exploit.py  k_nikto.py  k_nmap.py  k_smbclient.py  k_sslscan.py  k_whatweb.py  k_whois.py
tests/: test_agentic_integration.py  test_cli_flow.py  test_logging.py  test_planner.py  test_rate_limiter.py  test_reporting.py  test_validators.py
