[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurokami"
version = "0.1.0"
description = "AI-driven CLI penetration testing framework for Parrot OS and Debian-based Linux systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "thearjunl" }]
dependencies = [
  "click",
  "rich",
  "sqlalchemy",
  "numpy",
  "faiss-cpu",
  "build",
  "wheel",
]

[project.scripts]
kurokami = "core.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "modules*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
